--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,19 @@
     <color name="selected_calendar_grid_item_background">#8A8A8A</color>
     <color name="pressed_calendar_grid_item_background">#B8BCD3</color>
     <color name="default_calendar_grid_item_background">#FFFFFF</color>
+
+
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+
+    <!-- Colors for light theme -->
+    <color name="background_light">#FFFFFF</color>
+    <color name="text_light">#000000</color>
+    <color name="icon_light">#000000</color>
+
+    <!-- Colors for dark theme -->
+    <color name="background_dark">#121212</color>
+    <color name="text_dark">#8C8C8C</color>
+    <color name="icon_dark">#FFFFFF</color>
 </resources>
