--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Kalendar</string>
     <string name="Register"><u>Register</u></string>
+    <string name="LogIn"><u>Log In</u></string>
 </resources>
