--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,13 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
     <color name="selected_calendar_grid_item_background">#8A8A8A</color>
-    <color name="pressed_calendar_grid_item_background">#B8BCD3</color>
+    <color name="pressed_calendar_grid_item_background">#FF6A6A</color>
     <color name="default_calendar_grid_item_background">#FFFFFF</color>
 
 
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorSearch">#595959</color>
 
     <!-- Colors for light theme -->
     <color name="background_light">#FFFFFF</color>
