Friend Options Menu, Sending Fr

--- a/app/src/main/res/layout/add_friends.xml
+++ b/app/src/main/res/layout/add_friends.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_edges"
         app:queryHint="Search for friend name"
+        android:elevation="24dp"
         android:id="@+id/friend_search"/>
 
     <androidx.recyclerview.widget.RecyclerView
