--- a/app/src/main/res/layout/friends_activity.xml
+++ b/app/src/main/res/layout/friends_activity.xml
@@ -8,5 +8,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/request_list"/>
+        android:id="@+id/friends_list"/>
 </LinearLayout>
